--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "lucide-react": "^0.366.0"
   }
 }
